--- a/vignettes/literature.bib
+++ b/vignettes/literature.bib
@@ -6,7 +6,9 @@
 }
 @article{rsat1,
     title={RSAT: regulatory sequence analysis tools},
-    author={Thomas-Chollier, Morgane and Sand, Olivier and Turatsinze, Jean-Val{\'e}ry and Defrance, Matthieu and Vervisch, Eric and Broh{\'e}e, Sylvain and van Helden, Jacques and others},
+    author={Thomas-Chollier, Morgane and Sand, Olivier and Turatsinze,
+            Jean-Val{\'e}ry and Defrance, Matthieu and Vervisch,
+            Eric and Broh{\'e}e, Sylvain and van Helden, Jacques and others},
     journal={Nucleic acids research},
     volume={36},
     number={suppl 2},
@@ -15,7 +17,8 @@
     publisher={Oxford Univ Press}
 }
 @article{pape,
-    title={Compound Poisson approximation of the number of occurrences of a position frequency matrix (PFM) on both strands},
+    title={Compound Poisson approximation of the number of occurrences
+            of a position frequency matrix (PFM) on both strands},
     author={Pape, Utz J and Rahmann, Sven and Sun, Fengzhu and Vingron, Martin},
     journal={Journal of Computational Biology},
     volume={15},
@@ -23,4 +26,3 @@
     pages={547--564},
     year={2008},
 }
-
