--- a/vignettes/motifcounter.Rmd
+++ b/vignettes/motifcounter.Rmd
@@ -4,14 +4,23 @@ author: "Vignette Author"
 date: "`r Sys.Date()`"
 output: rmarkdown::html_vignette
 vignette: >
-  %\VignetteIndexEntry{Vignette Title}
-  %\VignetteEngine{knitr::rmarkdown}
-  %\VignetteEncoding{UTF-8}
+    %\VignetteIndexEntry{Vignette Title}
+    %\VignetteEngine{knitr::rmarkdown}
+    %\VignetteEncoding{UTF-8}
 bibliography: literature.bib
 ---
 
+```{r}
+library(knitr)
+opts_chunk$set(fig.path="fig/")
+```
+
 Here is also my first citation [@rsat1].
-Vignettes are long form documentation commonly included in packages. Because they are part of the distribution of the package, they need to be as compact as possible. The `html_vignette` output type provides a custom style sheet (and tweaks some options) to ensure that the resulting html is as small as possible. The `html_vignette` format:
+Vignettes are long form documentation commonly included in packages.
+Because they are part of the distribution of the package, they need to
+be as compact as possible. The `html_vignette` output type provides a
+custom style sheet (and tweaks some options) to ensure that the
+resulting html is as small as possible. The `html_vignette` format:
 
 - Never uses retina figures
 - Has a smaller default figure size
@@ -19,19 +28,24 @@ Vignettes are long form documentation commonly included in packages. Because the
 
 ## Vignette Info
 
-Note the various macros within the `vignette` section of the metadata block above. These are required in order to instruct R how to build the vignette. Note that you should change the `title` field and the `\VignetteIndexEntry` to match the title of your vignette.
+Note the various macros within the `vignette` section of the metadata
+block above. These are required in order to instruct R how to build
+the vignette. Note that you should change the `title` field and the
+`\VignetteIndexEntry` to match the title of your vignette.
 
 ## Styles
 
-The `html_vignette` template includes a basic CSS theme. To override this theme you can specify your own CSS in the document metadata as follows:
+The `html_vignette` template includes a basic CSS theme. To override
+this theme you can specify your own CSS in the document metadata as follows:
 
-    output: 
-      rmarkdown::html_vignette:
-        css: mystyles.css
+    output:
+        rmarkdown::html_vignette:
+            css: mystyles.css
 
 ## Figures
 
-The figure sizes have been customised so that you can easily put two images side-by-side. 
+The figure sizes have been customised so that you can easily
+put two images side-by-side.
 
 ```{r, fig.show='hold'}
 plot(1:10)
@@ -41,14 +55,16 @@ plot(10:1)
 You can enable figure captions by `fig_caption: yes` in YAML:
 
     output:
-      rmarkdown::html_vignette:
-        fig_caption: yes
+        rmarkdown::html_vignette:
+            fig_caption: yes
 
-Then you can use the chunk option `fig.cap = "Your figure caption."` in **knitr**.
+Then you can use the chunk option
+`fig.cap = "Your figure caption."` in **knitr**.
 
 ## More Examples
 
-You can write math expressions, e.g. $Y = X\beta + \epsilon$, footnotes^[A footnote here.], and tables, e.g. using `knitr::kable()`.
+You can write math expressions, e.g. $Y = X\beta + \epsilon$,
+footnotes^[A footnote here.], and tables, e.g. using `knitr::kable()`.
 
 ```{r, echo=FALSE, results='asis'}
 knitr::kable(head(mtcars, 10))
